--- a/style.css
+++ b/style.css
@@ -8,16 +8,18 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
+  flex-direction: column;
   gap: 20px;
   height: 100vh;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 100vw;
 }
 
 .ancients-container {
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
   gap: 55px;
   min-width: 40%;
   padding: 20px;
@@ -34,16 +36,17 @@ body {
 }
 
 .ancients-container .ancient-card.active {
-  border: 2px solid red;
+  border: 2px solid rgb(159, 6, 197);
 }
 
 
 .difficulty-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 20px;
-  height: 100vh;
+  height: 50px;
   justify-content: center;
+  align-items: flex-start;
 }
 
 
@@ -61,10 +64,11 @@ body {
 .deck-container {
   align-items: center;
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  flex-direction: row;
+  gap: 40px;
   justify-content: center;
   min-width: 30%;
+  padding-bottom: 10vh;
 }
 
 
@@ -102,13 +106,13 @@ body {
 }
 
 .deck-container .current-state .stage-container .dot.green {
-  background-color: green;
+  background-color: rgb(61, 194, 132);
 }
 .deck-container .current-state .stage-container .dot.brown {
-  background-color: brown;
+  background-color: rgb(185, 103, 65);
 }
 .deck-container .current-state .stage-container .dot.blue {
-  background-color: blue;
+  background-color: rgb(9, 197, 211);
 }
 .deck-container .current-state .stage-container .dot {
   color: white;
@@ -118,4 +122,13 @@ body {
   height: 30px;
   justify-content: center;
   width: 30px;
+}
+
+.makeDeck {
+  color: rgb(159, 6, 197);
+  border: 2px solid rgb(159, 6, 197);
+  box-sizing: border-box;
+  cursor: pointer;
+  padding: 5px;
+  text-align: center;
 }
