--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Roboto, sans-serif;
 }
 
-.App {
+.app {
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -24,20 +24,16 @@ body {
   min-width: 40%;
   padding: 20px;
 }
-
-.ancients-container .ancient-card {
+.ancient-card {
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: contain;
   box-sizing: border-box;
   cursor: pointer;
-  height: 260px;
-  width: 200px;
+  height: 420px;
+  width: 325px;
 }
 
-.ancients-container .ancient-card.active {
-  border: 2px solid rgb(159, 6, 197);
-}
 
 
 .difficulty-container {
@@ -50,7 +46,7 @@ body {
 }
 
 
-.difficulty-container .difficulty {
+.difficulty {
   border: 2px solid rgb(212, 209, 212);
   box-sizing: border-box;
   color: rgb(235, 224, 235);
@@ -59,7 +55,17 @@ body {
   text-align: center;
 }
 
+.difficulty-container.difficulty.active {
+  border: 2px solid rgb(159, 6, 197);
+}
 
+.active {
+  border: 2px solid rgb(159, 6, 197);
+}
+
+.hidden {
+  visibility: hidden;
+}
 
 .deck-container {
   align-items: center;
@@ -68,15 +74,24 @@ body {
   gap: 40px;
   justify-content: center;
   min-width: 30%;
-  padding-bottom: 10vh;
+  /* padding-bottom: 10vh; */
 }
 
 
 .deck-container .deck, .deck-container .last-card {
   background-size: cover;
-  height: 190px;
-  width: 130px;
+  height: 330px;
+  width: 225px;
+  /* background-image: url(); */
 }
+
+.deck {
+  cursor: pointer;
+}
+
+/* .show {
+  background-image: url();
+} */
 
 .deck-container .current-state {
   display: flex;
